--- a/demo/index.html
+++ b/demo/index.html
@@ -14,5 +14,7 @@
   <body>
 
   </body>
-  <script src="build.js" charset="utf-8"></script>
+  <script src="../node_modules/three/build/three.min.js" charset="utf-8"></script>
+  <script src="../GPUParticleSystem.js" charset="utf-8"></script>
+  <script src="index.js" charset="utf-8"></script>
 </html>
